# bcndecode

./: Cargo.toml  build.rs
src/: bcndecode.c  decode.rs  lib.rs
