[package]
name = "bcndecode"
version = "0.2.1"
authors = ["Istvan Fehervari <gooksl@gmail.com>", "Robert Nix <mischanix@gmail.com>", "REDxEYE <med45c@gmail.com>"]
description = "Decoder for DXTn-compressed image data."
license = "MIT"
build = "build.rs"
repository = "https://github.com/REDxEYE/bcndecode"
homepage = "https://github.com/REDxEYE/bcndecode"
keywords = ["bcn", "dxt", "image-processing"]

[build-dependencies]
cc = "1.0.96"

[dev-dependencies]
libc = "0.2.26"

[features]
test = []
